[package]
name = "zombiezen-const-cstr"
version = "1.0.0"
authors = [
  "Austin Bonander <austin.bonander@gmail.com>",
  "Ross Light <ross@zombiezen.com>",
]
edition = "2018"
description = "Create static C-compatible strings from Rust string literals."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zombiezen/const-cstr"

